--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         <ul class="nav-menu">
           <li class="menu-active"><a href="#intro">Home</a></li>
           <li><a href="#about">About Us</a></li>
-          <li><a href="#services">Our offer</a></li>
-          <li><a href="#portfolio">EU and National projects</a></li>
+          <li><a href="#services">Technology and Our Offer</a></li>
+          <li><a href="#portfolio">EU and National Projects</a></li>
           <li><a href="#team">Leadership Team</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
@@ -69,8 +69,8 @@
           <div class="carousel-item active" style="background-image: url('images/intro-carousel/1.jpg');">
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2>We are professional</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <h2>We are biotechnology and biophysics professionals</h2>
+                <p>Write how cool we are.</p>
                 <a href="#featured-services" class="btn-get-started scrollto">Get Started</a>
               </div>
             </div>
@@ -79,8 +79,8 @@
           <div class="carousel-item" style="background-image: url('images/intro-carousel/2.jpg');">
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2>At vero eos et accusamus</h2>
-                <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut.</p>
+                <h2>We provide the sharpest tools</h2>
+                <p>work to provide insdustry and academia with the high-tech biotechnology platforms for biomolecule interaction stuies.</p>
                 <a href="#featured-services" class="btn-get-started scrollto">Get Started</a>
               </div>
             </div>
@@ -89,8 +89,8 @@
           <div class="carousel-item" style="background-image: url('images/intro-carousel/3.jpg');">
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2>Temporibus autem quibusdam</h2>
-                <p>Beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt omnis iste natus error sit voluptatem accusantium.</p>
+                <h2>Biophysical tools</h2>
+                <p>Single-molecule and super-resolution microscopy.</p>
                 <a href="#featured-services" class="btn-get-started scrollto">Get Started</a>
               </div>
             </div>
