--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
         <header class="section-header">
           <h3>About Us</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <p>MB Platformina is young (established in the beginning of 2021 ) startup (SME) of [Vilnius University](https://www.vu.lt/verslui/inovacijos-ir-moksliniai-tyrimai/verslumas-universitete/startuoliai) ([member of INSTRUCT-ERIC, EMBL, EMBC/EMBO](https://www.gmc.vu.lt/en/about/cooperation/international-partnership)) and [FTMC](https://www.ftmc.lt/en/) (Center for Physical Sciences and Technology).</p>
         </header>
 
         <div class="row about-cols">
@@ -164,7 +164,7 @@
               </div>
               <h2 class="title"><a href="#">Our Mission</a></h2>
               <p>
-                Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                Provide industry and academia with platforms for biomeluecule studies.
               </p>
             </div>
           </div>
@@ -177,7 +177,7 @@
               </div>
               <h2 class="title"><a href="#">Our Plan</a></h2>
               <p>
-                Sed ut perspiciatis unde omnis iste natus error sit voluptatem  doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+                Use cost-efficient and esy to use tools and solutions that allows us to bring the best technollogy to labs.
               </p>
             </div>
           </div>
@@ -190,7 +190,7 @@
               </div>
               <h2 class="title"><a href="#">Our Vision</a></h2>
               <p>
-                Nemo enim ipsam voluptatem quia voluptas sit aut odit aut fugit, sed quia magni dolores eos qui ratione voluptatem sequi nesciunt Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet.
+                Open doors for best biological experiments and discoveries with out the need to worry about technology.
               </p>
             </div>
           </div>
