--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
           <div class="carousel-item active" style="background-image: url('images/intro-carousel/1.jpg');">
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2>We are biotechnology and biophysics professionals</h2>
-                <p>Write how cool we are.</p>
+                <h2>We are  professionals</h2>
+                <p>Write how cool we are in biotechnology and biophysics.</p>
                 <a href="#featured-services" class="btn-get-started scrollto">Get Started</a>
               </div>
             </div>
