--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         <ul class="nav-menu">
           <li class="menu-active"><a href="#intro">Home</a></li>
           <li><a href="#about">About Us</a></li>
-          <li><a href="#services">Technology and Our Offer</a></li>
-          <li><a href="#portfolio">EU and National Projects</a></li>
+          <li><a href="#services">EU and National Projects</a></li>
+          <li><a href="#portfolio">Technology and Our Offer</a></li>
           <li><a href="#team">Leadership Team</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
