--- a/index.html
+++ b/index.html
@@ -684,8 +684,8 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-info">
-            <h3>BizFlex</h3>
-            <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus. Scelerisque felis imperdiet proin fermentum leo. Amet volutpat consequat mauris nunc congue.</p>
+            <h3>Platformina</h3>
+            <p>MB Platformina is startup (SME) of [Vilnius University] and [FTMC].</p>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
@@ -702,30 +702,29 @@
           <div class="col-lg-3 col-md-6 footer-contact">
             <h4>Contact Us</h4>
             <p>
-              XYZ Street <br>
-              Mumbai<br>
-              India <br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              Šaltinių g. 24 <br>
+              Vilnius<br>
+              Lithuania <br>
+              <strong>Email:</strong> platformina1@gmai..com<br>
             </p>
 
-            <div class="social-links">
+           <!--  <div class="social-links">
               <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
               <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
               <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
               <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
               <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
-            </div>
+            </div> -->
 
           </div>
 
-          <div class="col-lg-3 col-md-6 footer-newsletter">
+<!--           <div class="col-lg-3 col-md-6 footer-newsletter">
             <h4>Our Newsletter</h4>
             <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna veniam enim veniam illum dolore legam minim quorum culpa amet magna export quem marada parida nodela caramase seza.</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit"  value="Subscribe">
             </form>
-          </div>
+          </div> -->
 
         </div>
       </div>
@@ -733,7 +732,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright 2018 <strong>Lakshya Saini</strong>. All Rights Reserved
+        &copy; Copyright 2023 <strong>Platformina</strong>. All Rights Reserved
       </div>
     </div>
   </footer><!-- #footer -->
