--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@
 
           <div class="col-lg-3 col-md-6 footer-info">
             <h3>Platformina</h3>
-            <p>MB Platformina is startup (SME) of [Vilnius University] and [FTMC].</p>
+            <p>MB Platformina is startup (SME) of Vilnius University and FTMC.</p>
           </div>
 
 <!--           <div class="col-lg-3 col-md-6 footer-links">
@@ -705,7 +705,7 @@
               Šaltinių g. 24 <br>
               Vilnius<br>
               Lithuania <br>
-              <strong>Email:</strong> platformina1@gmai..com<br>
+              <strong>Email:</strong> platformina1@gmai.com<br>
             </p>
 
            <!--  <div class="social-links">
