--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="container-fluid">
 
       <div id="logo" class="pull-left">
-        <h1><a href="#intro" class="scrollto">BizFlex</a></h1>
+        <h1><a href="#intro" class="scrollto">Platformina</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="#intro"><img src="images/logo.png" alt="" title="" /></a>-->
       </div>
