--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 
     <!--==========================
       Skills Section
-    ============================-->
+    ============================
     <section id="skills">
       <div class="container">
 
@@ -289,11 +289,11 @@
         </div>
 
       </div>
-    </section>
+    </section> --->
 
-    <!--==========================
+    <!---==========================
       Facts Section
-    ============================-->
+    ============================
     <section id="facts"  class="wow fadeIn">
       <div class="container">
 
@@ -327,7 +327,7 @@
   			</div>
 
       </div>
-    </section><!-- #facts -->
+    </section><!-- #facts
 
     <!--==========================
       Portfolio Section
