--- a/index.html
+++ b/index.html
@@ -289,7 +289,8 @@
         </div>
 
       </div>
-    </section> --->
+    </section> 
+    --->
 
     <!---==========================
       Facts Section
@@ -327,7 +328,8 @@
   			</div>
 
       </div>
-    </section><!-- #facts
+    </section>
+    --->
 
     <!--==========================
       Portfolio Section
