--- a/index.html
+++ b/index.html
@@ -449,6 +449,7 @@
       </div>
     </section><!-- #portfolio -->
 
+    <!---
     <section id="testimonials" class="section-bg wow fadeInUp">
       <div class="container">
 
@@ -516,7 +517,10 @@
         </div>
 
       </div>
-    </section><!-- #testimonials -->
+    </section>
+    
+    --->
+    <!-- #testimonials -->
 
     <!--==========================
       Team Section
