--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
 
         <div class="section-header">
           <h3>Contact Us</h3>
-          <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+          <p>We are happy to help you find the best solution for your research</p>
         </div>
 
         <div class="row contact-info">
@@ -628,23 +628,23 @@
             <div class="contact-address">
               <i class="ion-ios-location-outline"></i>
               <h3>Address</h3>
-              <address>A108 Adam Street, NY 535022, USA</address>
+              <address>Šaltinių g., Vilnius, Lithuania</address>
             </div>
           </div>
 
-          <div class="col-md-4">
+<!--           <div class="col-md-4">
             <div class="contact-phone">
               <i class="ion-ios-telephone-outline"></i>
               <h3>Phone Number</h3>
               <p><a href="tel:+155895548855">+1 5589 55488 55</a></p>
             </div>
-          </div>
+          </div> -->
 
           <div class="col-md-4">
             <div class="contact-email">
               <i class="ion-ios-email-outline"></i>
               <h3>Email</h3>
-              <p><a href="mailto:info@example.com">info@example.com</a></p>
+              <p><a href="mailto:info@example.com">platformina1@gmail.com</a></p>
             </div>
           </div>
 
