--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <!--==========================
       Featured Services Section
     ============================-->
-    <section id="featured-services">
+    <!---<section id="featured-services">
       <div class="container">
         <div class="row">
 
@@ -141,7 +141,9 @@
 
         </div>
       </div>
-    </section><!-- #featured-services -->
+    </section>
+    --->
+    <!-- #featured-services -->
 
     <!--==========================
       About Us Section
