--- a/index.html
+++ b/index.html
@@ -154,9 +154,12 @@
         <header class="section-header">
           <h3>About Us</h3>
           <p>MB Platformina is young (established in the beginning of 2021 ) startup (SME) of [Vilnius University](https://www.vu.lt/verslui/inovacijos-ir-moksliniai-tyrimai/verslumas-universitete/startuoliai) ([member of INSTRUCT-ERIC, EMBL, EMBC/EMBO](https://www.gmc.vu.lt/en/about/cooperation/international-partnership)) and [FTMC](https://www.ftmc.lt/en/) (Center for Physical Sciences and Technology).</p>
+          <p>Our mission: provide industry and academia with platforms for biomeluecule studies.</p>
+          <p>Our Plan: use cost-efficient and esy to use tools and solutions that allows us to bring the best technollogy to labs</p>
+          <p>Our Vision: open doors for best biological experiments and discoveries with out the need to worry about technology</p>
         </header>
 
-        <div class="row about-cols">
+        <!-- <div class="row about-cols">
 
           <div class="col-md-4 wow fadeInUp">
             <div class="about-col">
@@ -197,9 +200,10 @@
             </div>
           </div>
 
-        </div>
+        </div> -->
 
       </div>
+
     </section><!-- #about -->
 
     <!--==========================
