--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
         <header class="section-header">
           <h3>About Us</h3>
-          <p>MB Platformina is young (established in the beginning of 2021 ) startup (SME) of [Vilnius University](https://www.vu.lt/verslui/inovacijos-ir-moksliniai-tyrimai/verslumas-universitete/startuoliai) ([member of INSTRUCT-ERIC, EMBL, EMBC/EMBO](https://www.gmc.vu.lt/en/about/cooperation/international-partnership)) and [FTMC](https://www.ftmc.lt/en/) (Center for Physical Sciences and Technology).</p>
+          <p>MB Platformina is young (established in the beginning of 2021 ) startup (SME) of <a href="https://www.vu.lt/verslui/inovacijos-ir-moksliniai-tyrimai/verslumas-universitete/startuoliai">Vilnius University</a> (<a href="https://www.gmc.vu.lt/en/about/cooperation/international-partnership">member of INSTRUCT-ERIC, EMBL, EMBC/EMBO</a>) and <a href="https://www.ftmc.lt/en/">FTMC (Center for Physical Sciences and Technology) </a>.</p>
           <p>Our mission: provide industry and academia with platforms for biomeluecule studies.</p>
           <p>Our Plan: use cost-efficient and esy to use tools and solutions that allows us to bring the best technollogy to labs</p>
           <p>Our Vision: open doors for best biological experiments and discoveries with out the need to worry about technology</p>
