--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
 
   <!-- Main Stylesheet File -->
-  <link href="css/bizflex.css" rel="stylesheet">
+  <link href="css/platformina.css" rel="stylesheet">
   
 </head>
 
