--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="#">App 1</a></h4>
+                <h4><a href="#">Soft DNA Curtains</a></h4>
                 <p>App</p>
               </div>
             </div>
@@ -385,8 +385,8 @@
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="#">Web 3</a></h4>
-                <p>Web</p>
+                <h4><a href="#">Semi-automated micro-contact printing machine</a></h4>
+                <p>App</p>
               </div>
             </div>
           </div>
@@ -400,7 +400,7 @@
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="#">App 2</a></h4>
+                <h4><a href="#">Ink solutions for micro-contact printing</a></h4>
                 <p>App</p>
               </div>
             </div>
@@ -415,8 +415,8 @@
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="#">Card 2</a></h4>
-                <p>Card</p>
+                <h4><a href="#">Custom functionalised DNA molecules for DNA Curtains</a></h4>
+                <p>App</p>
               </div>
             </div>
           </div>
@@ -430,13 +430,13 @@
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="#">Web 2</a></h4>
-                <p>Web</p>
+                <h4><a href="#">Single-molecule fluorescence microscopy solutions</a></h4>
+                <p>App</p>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
             <div class="portfolio-wrap">
               <figure>
                 <img src="images/portfolio/app3.jpg" class="img-fluid" alt="">
@@ -449,7 +449,7 @@
                 <p>App</p>
               </div>
             </div>
-          </div>        
+          </div>        --> 
 
         </div>
 
@@ -550,9 +550,7 @@
                   <span>Chief Executive Officer, Founder</span>
                   <div class="social">
                     <a href=""><i class="fa fa-twitter"></i></a>
-                    <a href=""><i class="fa fa-facebook"></i></a>
-                    <a href=""><i class="fa fa-google-plus"></i></a>
-                    <a href=""><i class="fa fa-linkedin"></i></a>
+                    <a href=""><i class="fa fa-orcid"></i></a>
                   </div>
                 </div>
               </div>
@@ -568,9 +566,7 @@
                   <span>Founder</span>
                   <div class="social">
                     <a href=""><i class="fa fa-twitter"></i></a>
-                    <a href=""><i class="fa fa-facebook"></i></a>
-                    <a href=""><i class="fa fa-google-plus"></i></a>
-                    <a href=""><i class="fa fa-linkedin"></i></a>
+                    <a href=""><i class="fa fa-orcid"></i></a>
                   </div>
                 </div>
               </div>
@@ -585,10 +581,7 @@
                   <h4>Aurimas Kopūstas</h4>
                   <span>Founder</span>
                   <div class="social">
-                    <a href=""><i class="fa fa-twitter"></i></a>
-                    <a href=""><i class="fa fa-facebook"></i></a>
-                    <a href=""><i class="fa fa-google-plus"></i></a>
-                    <a href=""><i class="fa fa-linkedin"></i></a>
+                    <a href=""><i class="fa fa-orcid"></i></a>
                   </div>
                 </div>
               </div>
