--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
           <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
             <div class="icon"><i class="ion-ios-analytics-outline"></i></div>
-            <h4 class="title"><a href="">Soft RNA Curtains/a></h4>
+            <h4 class="title"><a href="">Soft RNA Curtains</a></h4>
             <p class="description">info on this project</p>
           </div>
           <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
@@ -536,7 +536,7 @@
       <div class="container">
         <div class="section-header wow fadeInUp">
           <h3>Leadership Team</h3>
-          <p>Platformina was incorporated by three biotecnology and biophysics professionals</p>
+          <p>Platformina was incorporated by three biotechnology and biophysics professionals</p>
         </div>
 
         <div class="row">
@@ -549,8 +549,8 @@
                   <h4>Marijonas Tutkus</h4>
                   <span>Chief Executive Officer, Founder</span>
                   <div class="social">
-                    <a href=""><i class="fa fa-twitter"></i></a>
-                    <a href=""><i class="fa fa-orcid"></i></a>
+                    <a href="https://twitter.com/MTutkus"><i class="fa fa-twitter"></i></a>
+                    <a href="https://orcid.org/my-orcid?orcid=0000-0002-5795-1347">orcid</a>
                   </div>
                 </div>
               </div>
@@ -565,8 +565,8 @@
                   <h4>Mindaugas Zaremba</h4>
                   <span>Founder</span>
                   <div class="social">
-                    <a href=""><i class="fa fa-twitter"></i></a>
-                    <a href=""><i class="fa fa-orcid"></i></a>
+                    <a href="https://twitter.com/MindaugasZare"><i class="fa fa-twitter"></i></a>
+                    <a href="https://orcid.org/0000-0002-8606-6304">orcid</a>
                   </div>
                 </div>
               </div>
@@ -581,7 +581,7 @@
                   <h4>Aurimas Kopūstas</h4>
                   <span>Founder</span>
                   <div class="social">
-                    <a href=""><i class="fa fa-orcid"></i></a>
+                    <a href="https://orcid.org/0000-0002-2972-1851">orcid</a>
                   </div>
                 </div>
               </div>
