--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     <div class="container-fluid">
 
       <div id="logo" class="pull-left">
-        <h1><a href="#intro" class="scrollto">Platformina</a></h1>
+        <!---<h1><a href="#intro" class="scrollto">Platformina</a></h1>--->
         <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="#intro"><img src="images/logo.png" alt="" title="" /></a>-->
+        <a href="#intro"><img src="images/logo.png" alt="" title="" /></a>
       </div>
 
       <nav id="nav-menu-container">
@@ -385,7 +385,7 @@
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="#">Semi-automated micro-contact printing machine</a></h4>
+                <h4><a href="#">Micro-contact printing machine</a></h4>
                 <p>App</p>
               </div>
             </div>
@@ -400,7 +400,7 @@
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="#">Ink solutions for micro-contact printing</a></h4>
+                <h4><a href="#">Ink solutions</a></h4>
                 <p>App</p>
               </div>
             </div>
@@ -415,7 +415,7 @@
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="#">Custom functionalised DNA molecules for DNA Curtains</a></h4>
+                <h4><a href="#">Custom functionalised DNA molecules</a></h4>
                 <p>App</p>
               </div>
             </div>
@@ -430,7 +430,7 @@
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="#">Single-molecule fluorescence microscopy solutions</a></h4>
+                <h4><a href="#">SM fluorescence microscopy solutions</a></h4>
                 <p>App</p>
               </div>
             </div>
