--- a/index.html
+++ b/index.html
@@ -225,12 +225,12 @@
             <p class="description">info on this project</p>
           </div>
           <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
-            <div class="icon"><i class="ion-ios-bookmarks-outline"></i></div>
+            <div class="icon"><i class="ion-ios-analytics-outline"></i></div>
             <h4 class="title"><a href="">Soft DNA Curtains optimisation</a></h4>
             <p class="description">Info on this project</p>
           </div>
           <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
-            <div class="icon"><i class="ion-ios-paper-outline"></i></div>
+            <div class="icon"><i class="ion-ios-analytics-outline"></i></div>
             <h4 class="title"><a href="">Florin</a></h4>
             <p class="description">Info on this project</p>
           </div>
@@ -365,13 +365,13 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="images/portfolio/app1.jpg" class="img-fluid" alt="">
-                <a href="images/portfolio/app1.jpg" data-lightbox="portfolio" data-title="App 1" class="link-preview" title="Preview"><i class="ion ion-eye"></i></a>
-                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                <!---<a href="images/portfolio/app1.jpg" data-lightbox="portfolio" data-title="App 1" class="link-preview" title="Preview"><i class="ion ion-eye"></i></a>--->
+                <!---<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>--->
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="#">Soft DNA Curtains</a></h4>
-                <p>App</p>
+                <!---<h4><a href="#">Soft DNA Curtains platform</a></h4>--->
+                <p>Soft DNA Curtains platforms</p>
               </div>
             </div>
           </div>
@@ -380,13 +380,13 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="images/portfolio/web3.jpg" class="img-fluid" alt="">
-                <a href="images/portfolio/web3.jpg" class="link-preview" data-lightbox="portfolio" data-title="Web 3" title="Preview"><i class="ion ion-eye"></i></a>
-                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+               <!--- <a href="images/portfolio/web3.jpg" class="link-preview" data-lightbox="portfolio" data-title="Web 3" title="Preview"><i class="ion ion-eye"></i></a>--->
+               <!--- <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>--->
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="#">Micro-contact printing machine</a></h4>
-                <p>App</p>
+                <!---<h4><a href="#">Micro-contact printing machine</a></h4>--->
+                <p>Micro-contact printing machines</p>
               </div>
             </div>
           </div>
@@ -395,18 +395,18 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="images/portfolio/app2.jpg" class="img-fluid" alt="">
-                <a href="images/portfolio/app2.jpg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
-                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                <!---<a href="images/portfolio/app2.jpg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>--->
+                <!---<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>--->
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="#">Ink solutions</a></h4>
-                <p>App</p>
+                <!---<h4><a href="#">Kits for Soft DNA Curtains</a></h4>--->
+                <p>Ink, DNA, stamp kits for Soft DNA Curtains</p>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card wow fadeInUp">
+  <!--         <div class="col-lg-4 col-md-6 portfolio-item filter-card wow fadeInUp">
             <div class="portfolio-wrap">
               <figure>
                 <img src="images/portfolio/card2.jpg" class="img-fluid" alt="">
@@ -419,19 +419,19 @@
                 <p>App</p>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web wow fadeInUp" data-wow-delay="0.1s">
             <div class="portfolio-wrap">
               <figure>
                 <img src="images/portfolio/web2.jpg" class="img-fluid" alt="">
-                <a href="images/portfolio/web2.jpg" class="link-preview" data-lightbox="portfolio" data-title="Web 2" title="Preview"><i class="ion ion-eye"></i></a>
-                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                <!---<a href="images/portfolio/web2.jpg" class="link-preview" data-lightbox="portfolio" data-title="Web 2" title="Preview"><i class="ion ion-eye"></i></a>--->
+                <!---<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>--->
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="#">SM fluorescence microscopy solutions</a></h4>
-                <p>App</p>
+                <!---<h4><a href="#">SM fluorescence microscopy solutions</a></h4>--->
+                <p>SM fluorescence microscopy solutions</p>
               </div>
             </div>
           </div>
