--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
                   <span>Chief Executive Officer, Founder</span>
                   <div class="social">
                     <a href="https://twitter.com/MTutkus"><i class="fa fa-twitter"></i></a>
-                    <a href="https://orcid.org/my-orcid?orcid=0000-0002-5795-1347">orcid</a>
+                    <a href="https://orcid.org/0000-0002-5795-1347">orcid</a>
                   </div>
                 </div>
               </div>
