--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     <div class="container-fluid">
 
       <div id="logo" class="pull-left">
-        <!---<h1><a href="#intro" class="scrollto">Platformina</a></h1>--->
+        <h1><a href="#intro" class="scrollto">Platformina</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
-        <a href="#intro"><img src="images/logo.png" alt="" title="" /></a>
+        <!---<a href="#intro"><img src="images/logo.png" alt="" title="" /></a>--->
       </div>
 
       <nav id="nav-menu-container">
