--- a/index.html
+++ b/index.html
@@ -153,10 +153,11 @@
 
         <header class="section-header">
           <h3>About Us</h3>
-          <p>MB Platformina is young (established in the beginning of 2021 ) startup (SME) of <a href="https://www.vu.lt/verslui/inovacijos-ir-moksliniai-tyrimai/verslumas-universitete/startuoliai">Vilnius University</a> (<a href="https://www.gmc.vu.lt/en/about/cooperation/international-partnership">member of INSTRUCT-ERIC, EMBL, EMBC/EMBO</a>) and <a href="https://www.ftmc.lt/en/">FTMC (Center for Physical Sciences and Technology) </a>.</p>
-          <p>Our mission: provide industry and academia with platforms for biomeluecule studies.</p>
-          <p>Our Plan: use cost-efficient and esy to use tools and solutions that allows us to bring the best technollogy to labs</p>
-          <p>Our Vision: open doors for best biological experiments and discoveries with out the need to worry about technology</p>
+          <p>MB Platformina is young (established in the beginning of 2021 ) startup (SME) of <a href="https://www.vu.lt/verslui/inovacijos-ir-moksliniai-tyrimai/verslumas-universitete/startuoliai">Vilnius University</a> (<a href="https://www.gmc.vu.lt/en/about/cooperation/international-partnership">member of INSTRUCT-ERIC, EMBL, EMBC/EMBO</a>)
+          and <a href="https://www.ftmc.lt/en/">FTMC (Center for Physical Sciences and Technology) </a>.
+          <br>Our mission: provide industry and academia with platforms for biomeluecule studies.
+          <br>Our Plan: use cost-efficient and esy to use tools and find such solutions that allows us to bring the best technollogy to labs.
+          <br>Our Vision: open doors for best biological experiments and discoveries with out the need to worry about technology</p>
         </header>
 
         <!-- <div class="row about-cols">
@@ -221,18 +222,18 @@
 
           <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
             <div class="icon"><i class="ion-ios-analytics-outline"></i></div>
-            <h4 class="title"><a href="">Soft RNA Curtains</a></h4>
-            <p class="description">info on this project</p>
+            <h4 class="title">RNA Curtains platform prototype fabrication</h4>
+            <p class="description">2021-2023. “Inostart” project, project no: 01.2.1-MITA-T-852</p>
           </div>
           <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
             <div class="icon"><i class="ion-ios-analytics-outline"></i></div>
-            <h4 class="title"><a href="">Soft DNA Curtains optimisation</a></h4>
-            <p class="description">Info on this project</p>
+            <h4 class="title">Solutions for DNA Curtains platform stability optimization</h4>
+            <p class="description">2021-2022. “Inočekis” project. project no: 01.2.1-MITA-T-851.</p>
           </div>
           <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
             <div class="icon"><i class="ion-ios-analytics-outline"></i></div>
-            <h4 class="title"><a href="">Florin</a></h4>
-            <p class="description">Info on this project</p>
+            <h4 class="title">Florin</h4>
+            <p class="description"> <a href="https://cordis.europa.eu/project/id/101086142">Platformina is a partner of this project, which is funded under Marie Skłodowska-Curie Actions (MSCA)</a></p>
           </div>
   <!--         <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
             <div class="icon"><i class="ion-ios-speedometer-outline"></i></div>
@@ -536,7 +537,7 @@
       <div class="container">
         <div class="section-header wow fadeInUp">
           <h3>Leadership Team</h3>
-          <p>Platformina was incorporated by three biotechnology and biophysics professionals</p>
+          <p>Platformina was incorporated by three biotechnology and biophysics professionals: Dr. Marijonas Tutkus, Dr. Mindaugas Zaremba, and Aurimas Kopūstas./p>
         </div>
 
         <div class="row">
