--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               <div class="carousel-content">
                 <h2>We are  professionals</h2>
                 <p>Write how cool we are in biotechnology and biophysics.</p>
-                <a href="#featured-services" class="btn-get-started scrollto">Get Started</a>
+                <!---<a href="#featured-services" class="btn-get-started scrollto">Get Started</a>--->
               </div>
             </div>
           </div>
@@ -81,7 +81,7 @@
               <div class="carousel-content">
                 <h2>We provide the sharpest tools</h2>
                 <p>work to provide insdustry and academia with the high-tech biotechnology platforms for biomolecule interaction stuies.</p>
-                <a href="#featured-services" class="btn-get-started scrollto">Get Started</a>
+                <!---<a href="#featured-services" class="btn-get-started scrollto">Get Started</a>--->
               </div>
             </div>
           </div>
@@ -91,7 +91,7 @@
               <div class="carousel-content">
                 <h2>Biophysical tools</h2>
                 <p>Single-molecule and super-resolution microscopy.</p>
-                <a href="#featured-services" class="btn-get-started scrollto">Get Started</a>
+               <!---> <a href="#featured-services" class="btn-get-started scrollto">Get Started</a>--->
               </div>
             </div>
           </div>
