--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2>We are  professionals</h2>
-                <p>Write how cool we are in biotechnology and biophysics.</p>
+                <p>Since 2021 Platformina has developed methods for nucleic acids functionalization, immobilization, and manipulation.</p>
                 <!---<a href="#featured-services" class="btn-get-started scrollto">Get Started</a>--->
               </div>
             </div>
@@ -80,7 +80,9 @@
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2>We provide the sharpest tools</h2>
-                <p>work to provide insdustry and academia with the high-tech biotechnology platforms for biomolecule interaction stuies.</p>
+                <p>work to provide insdustry and academia with the high-tech biotechnology platforms for biomolecule interaction stuies.<br>
+
+                </p>
                 <!---<a href="#featured-services" class="btn-get-started scrollto">Get Started</a>--->
               </div>
             </div>
@@ -91,7 +93,7 @@
               <div class="carousel-content">
                 <h2>Biophysical tools</h2>
                 <p>Single-molecule and super-resolution microscopy.</p>
-               <!---> <a href="#featured-services" class="btn-get-started scrollto">Get Started</a>--->
+               <!---<a href="#featured-services" class="btn-get-started scrollto">Get Started</a>--->
               </div>
             </div>
           </div>
