--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2>We are  professionals</h2>
-                <p>Since 2021 Platformina has developed methods for nucleic acids functionalization, immobilization, and manipulation.</p>
+                <p>Since 2021 Platformina has developed methods for nucleic acids functionalization, immobilization, manipulation, and visualisation at the single-molecule level.</p>
                 <!---<a href="#featured-services" class="btn-get-started scrollto">Get Started</a>--->
               </div>
             </div>
@@ -80,7 +80,7 @@
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2>We provide the sharpest tools</h2>
-                <p>work to provide insdustry and academia with the high-tech biotechnology platforms for biomolecule interaction stuies.<br>
+                <p>We work to provide insdustry and academia with the high-tech biotechnology platforms for biomolecule interaction stuies.<br>
 
                 </p>
                 <!---<a href="#featured-services" class="btn-get-started scrollto">Get Started</a>--->
@@ -92,7 +92,7 @@
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2>Biophysical tools</h2>
-                <p>Single-molecule and super-resolution microscopy.</p>
+                <p>We work to provide insdustry and academia single-molecule and super-resolution microscopy solutions.</p>
                <!---<a href="#featured-services" class="btn-get-started scrollto">Get Started</a>--->
               </div>
             </div>
@@ -235,7 +235,7 @@
           <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
             <div class="icon"><i class="ion-ios-analytics-outline"></i></div>
             <h4 class="title">Florin</h4>
-            <p class="description"> <a href="https://cordis.europa.eu/project/id/101086142">Platformina is a partner of this project, which is funded under Marie Skłodowska-Curie Actions (MSCA)</a></p>
+            <p class="description">Platformina is a partner of this project, which is funded under Marie Skłodowska-Curie Actions (MSCA)<a href="https://cordis.europa.eu/project/id/101086142">More on Florin project.</a></p>
           </div>
   <!--         <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
             <div class="icon"><i class="ion-ios-speedometer-outline"></i></div>
@@ -374,7 +374,12 @@
 
               <div class="portfolio-info">
                 <!---<h4><a href="#">Soft DNA Curtains platform</a></h4>--->
-                <p>Soft DNA Curtains platforms</p>
+                <p>Soft DNA Curtains platforms<br>
+                Studies of fluorescently labelled proteins using Soft DNA Curtains.<br>
+                Fabrication of modified coverslips for printing of the sAv or tAv line-features.<br>
+                Fabrication of modified coverslips with printed sAv or tAv line-features.<br>
+                Ready-to-use flowcells with the printed sAv or tAv line features.
+                </p>
               </div>
             </div>
           </div>
@@ -404,7 +409,9 @@
 
               <div class="portfolio-info">
                 <!---<h4><a href="#">Kits for Soft DNA Curtains</a></h4>--->
-                <p>Ink, DNA, stamp kits for Soft DNA Curtains</p>
+                <p>Ink, DNA, stamp kits for Soft DNA Curtains
+
+                </p>
               </div>
             </div>
           </div>
