--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
         <header class="section-header">
           <h3>About Us</h3>
           <p>MB Platformina is young (established in the beginning of 2021 ) startup (SME) of <a href="https://www.vu.lt/verslui/inovacijos-ir-moksliniai-tyrimai/verslumas-universitete/startuoliai">Vilnius University</a> (<a href="https://www.gmc.vu.lt/en/about/cooperation/international-partnership">member of INSTRUCT-ERIC, EMBL, EMBC/EMBO</a>)
-          and <a href="https://www.ftmc.lt/en/">FTMC (Center for Physical Sciences and Technology) </a>.
-          <br>Our mission: provide industry and academia with platforms for biomeluecule studies.
-          <br>Our Plan: use cost-efficient and esy to use tools and find such solutions that allows us to bring the best technollogy to labs.
+          and <a href="https://www.ftmc.lt/en/">FTMC (Center for Physical Sciences and Technology) </a>.<br>
+          <br>Our mission: provide industry and academia with platforms for biomeluecule studies.<br>
+          <br>Our Plan: use cost-efficient and esy to use tools and find such solutions that allows us to bring the best technollogy to labs.<br>
           <br>Our Vision: open doors for best biological experiments and discoveries with out the need to worry about technology</p>
         </header>
 
@@ -235,7 +235,7 @@
           <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
             <div class="icon"><i class="ion-ios-analytics-outline"></i></div>
             <h4 class="title">Florin</h4>
-            <p class="description">Platformina is a partner of this project, which is funded under Marie Skłodowska-Curie Actions (MSCA)<a href="https://cordis.europa.eu/project/id/101086142">More on Florin project.</a></p>
+            <p class="description">Platformina is a partner of this project, which is funded under Marie Skłodowska-Curie Actions (MSCA)<a href="https://cordis.europa.eu/project/id/101086142">, find more on Florin project.</a></p>
           </div>
   <!--         <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
             <div class="icon"><i class="ion-ios-speedometer-outline"></i></div>
@@ -368,18 +368,13 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="images/portfolio/app1.jpg" class="img-fluid" alt="">
-                <!---<a href="images/portfolio/app1.jpg" data-lightbox="portfolio" data-title="App 1" class="link-preview" title="Preview"><i class="ion ion-eye"></i></a>--->
+                <a href="images/portfolio/app1.jpg" data-lightbox="portfolio" data-title="App 1" class="link-preview" title="Preview"><i class="ion ion-eye"></i></a>
                 <!---<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>--->
               </figure>
 
               <div class="portfolio-info">
                 <!---<h4><a href="#">Soft DNA Curtains platform</a></h4>--->
-                <p>Soft DNA Curtains platforms<br>
-                Studies of fluorescently labelled proteins using Soft DNA Curtains.<br>
-                Fabrication of modified coverslips for printing of the sAv or tAv line-features.<br>
-                Fabrication of modified coverslips with printed sAv or tAv line-features.<br>
-                Ready-to-use flowcells with the printed sAv or tAv line features.
-                </p>
+                <p>Soft DNA Curtains platforms</p>
               </div>
             </div>
           </div>
@@ -388,7 +383,7 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="images/portfolio/web3.jpg" class="img-fluid" alt="">
-               <!--- <a href="images/portfolio/web3.jpg" class="link-preview" data-lightbox="portfolio" data-title="Web 3" title="Preview"><i class="ion ion-eye"></i></a>--->
+               <a href="images/portfolio/web3.jpg" class="link-preview" data-lightbox="portfolio" data-title="Web 3" title="Preview"><i class="ion ion-eye"></i></a>
                <!--- <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>--->
               </figure>
 
@@ -403,20 +398,33 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="images/portfolio/app2.jpg" class="img-fluid" alt="">
-                <!---<a href="images/portfolio/app2.jpg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>--->
+                <a href="images/portfolio/app2.jpg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
                 <!---<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>--->
               </figure>
 
               <div class="portfolio-info">
                 <!---<h4><a href="#">Kits for Soft DNA Curtains</a></h4>--->
-                <p>Ink, DNA, stamp kits for Soft DNA Curtains
-
-                </p>
+                <p>Ink, DNA, stamp kits for Soft DNA Curtains</p>
               </div>
             </div>
           </div>
 
-  <!--         <div class="col-lg-4 col-md-6 portfolio-item filter-card wow fadeInUp">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web wow fadeInUp" data-wow-delay="0.1s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="images/portfolio/web2.jpg" class="img-fluid" alt="">
+                <a href="images/portfolio/web2.jpg" class="link-preview" data-lightbox="portfolio" data-title="Web 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <!---<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>--->
+              </figure>
+
+              <div class="portfolio-info">
+                <!---<h4><a href="#">SM fluorescence microscopy solutions</a></h4>--->
+                <p>SM fluorescence microscopy solutions</p>
+              </div>
+            </div>
+          </div>
+
+<!---!--         <div class="col-lg-4 col-md-6 portfolio-item filter-card wow fadeInUp">
             <div class="portfolio-wrap">
               <figure>
                 <img src="images/portfolio/card2.jpg" class="img-fluid" alt="">
@@ -429,22 +437,7 @@
                 <p>App</p>
               </div>
             </div>
-          </div> -->
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web wow fadeInUp" data-wow-delay="0.1s">
-            <div class="portfolio-wrap">
-              <figure>
-                <img src="images/portfolio/web2.jpg" class="img-fluid" alt="">
-                <!---<a href="images/portfolio/web2.jpg" class="link-preview" data-lightbox="portfolio" data-title="Web 2" title="Preview"><i class="ion ion-eye"></i></a>--->
-                <!---<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>--->
-              </figure>
-
-              <div class="portfolio-info">
-                <!---<h4><a href="#">SM fluorescence microscopy solutions</a></h4>--->
-                <p>SM fluorescence microscopy solutions</p>
-              </div>
-            </div>
-          </div>
+          </div> -->          
 
           <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
             <div class="portfolio-wrap">
@@ -546,7 +539,7 @@
       <div class="container">
         <div class="section-header wow fadeInUp">
           <h3>Leadership Team</h3>
-          <p>Platformina was incorporated by three biotechnology and biophysics professionals: Dr. Marijonas Tutkus, Dr. Mindaugas Zaremba, and Aurimas Kopūstas./p>
+          <p>Platformina was incorporated by three biotechnology and biophysics professionals: Dr. Marijonas Tutkus, Dr. Mindaugas Zaremba, and Aurimas Kopūstas.</p>
         </div>
 
         <div class="row">
