--- a/index.html
+++ b/index.html
@@ -379,11 +379,11 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web wow fadeInUp" data-wow-delay="0.1s">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.1s">
             <div class="portfolio-wrap">
               <figure>
-                <img src="images/portfolio/web3.jpg" class="img-fluid" alt="">
-               <a href="images/portfolio/web3.jpg" class="link-preview" data-lightbox="portfolio" data-title="Web 3" title="Preview"><i class="ion ion-eye"></i></a>
+                <img src="images/portfolio/app2.jpg" class="img-fluid" alt="">
+                <a href="images/portfolio/app2.jpg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
                <!--- <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>--->
               </figure>
 
@@ -397,8 +397,8 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
             <div class="portfolio-wrap">
               <figure>
-                <img src="images/portfolio/app2.jpg" class="img-fluid" alt="">
-                <a href="images/portfolio/app2.jpg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <img src="images/portfolio/app3.jpg" class="img-fluid" alt="">
+                <a href="images/portfolio/app3.jpg" class="link-preview" data-lightbox="portfolio" data-title="App 3" title="Preview"><i class="ion ion-eye"></i></a>
                 <!---<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>--->
               </figure>
 
@@ -409,11 +409,11 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web wow fadeInUp" data-wow-delay="0.1s">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.1s">
             <div class="portfolio-wrap">
               <figure>
-                <img src="images/portfolio/web2.jpg" class="img-fluid" alt="">
-                <a href="images/portfolio/web2.jpg" class="link-preview" data-lightbox="portfolio" data-title="Web 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <img src="images/portfolio/app4.jpg" class="img-fluid" alt="">
+                <a href="images/portfolio/app4.jpg" class="link-preview" data-lightbox="portfolio" data-title="App 4" title="Preview"><i class="ion ion-eye"></i></a>
                 <!---<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>--->
               </figure>
 
