--- a/index.html
+++ b/index.html
@@ -693,7 +693,8 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-info">
-            <h3>Platformina</h3>
+            <!---<h3>Platformina</h3>--->
+            <a href="#intro"><img src="images/logo.png" alt="" title="" /></a>
             <p>MB Platformina is startup (SME) of Vilnius University and FTMC.</p>
           </div>
 
@@ -714,7 +715,7 @@
               Šaltinių g. 24 <br>
               Vilnius<br>
               Lithuania <br>
-              <strong>Email:</strong> platformina1@gmai.com<br>
+              <strong>Email:</strong> platformina1@gmail.com<br>
             </p>
 
            <!--  <div class="social-links">
