--- a/index.html
+++ b/index.html
@@ -695,7 +695,10 @@
           <div class="col-lg-3 col-md-6 footer-info">
             <!---<h3>Platformina</h3>--->
             <a href="#intro"><img src="images/logo.png" alt="" title="" /></a>
-            <p>MB Platformina is startup (SME) of Vilnius University and FTMC.</p>
+            <p>MB Platformina is startup company (SME) of Vilnius University and FTMC.
+            VAT: LT100013828913
+            Reg. code: 305670114
+            </p>
           </div>
 
 <!--           <div class="col-lg-3 col-md-6 footer-links">
