--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="images/portfolio/app4.jpg" class="img-fluid" alt="">
-                <a href="images/portfolio/app4.jpg" class="link-preview" data-lightbox="portfolio" data-title="App 4" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="images/portfolio/app4.jpg" class="link-preview" data-lightbox="portfolio" data-title="SM super-resolution microscopy solutions" title="Preview"><i class="ion ion-eye"></i></a>
                 <!---<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>--->
               </figure>
 
