--- a/index.html
+++ b/index.html
@@ -348,7 +348,9 @@
 
         <header class="section-header">
           <h3 class="section-title">Technology and Our Offer</h3>
-          <p>We provide platforms for DNA-protein interaction studies and fluorescence microscopy solutions also we can help with custom platform or micrsocopy system design.</p>
+          <p>We provide platforms for DNA-protein interaction studies and fluorescence microscopy solutions also we can help with custom platform or micrsocopy system design.
+            Technology of our Soft DNA Curtains Platform is based on our  <a href="https://pubs.acs.org/doi/full/10.1021/acs.langmuir.8b03424">publication1</a>
+             and  <a href="https://pubs.acs.org/doi/10.1021/acs.langmuir.1c00066">publication2</a> .</p>
         </header>
 
 <!--         <div class="row">
@@ -368,13 +370,14 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="images/portfolio/app1.jpg" class="img-fluid" alt="">
-                <a href="images/portfolio/app1.jpg" data-lightbox="portfolio" data-title="App 1" class="link-preview" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="images/portfolio/app1.jpg" data-lightbox="portfolio" data-title="Ready-to-use platforms, kits and studies" class="link-preview" title="Preview"><i class="ion ion-eye"></i></a>
                 <!---<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>--->
               </figure>
 
               <div class="portfolio-info">
                 <!---<h4><a href="#">Soft DNA Curtains platform</a></h4>--->
-                <p>Soft DNA Curtains platforms</p>
+                <h4>Soft DNA Curtains platform</h4>
+                <p>Ready-to-use platforms, kits and studies</p>
               </div>
             </div>
           </div>
@@ -398,13 +401,14 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="images/portfolio/app3.jpg" class="img-fluid" alt="">
-                <a href="images/portfolio/app3.jpg" class="link-preview" data-lightbox="portfolio" data-title="App 3" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="images/portfolio/app3.jpg" class="link-preview" data-lightbox="portfolio" data-title="Si masters, Ink, DNA, stamps, and kits for Soft DNA Curtains" title="Preview"><i class="ion ion-eye"></i></a>
                 <!---<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>--->
               </figure>
 
               <div class="portfolio-info">
                 <!---<h4><a href="#">Kits for Soft DNA Curtains</a></h4>--->
-                <p>Ink, DNA, stamp kits for Soft DNA Curtains</p>
+                <h4>Components and kits</h4>
+                <p>Si masters, Ink, DNA, stamps, and kits for Soft DNA Curtains</p>
               </div>
             </div>
           </div>
@@ -413,13 +417,14 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="images/portfolio/app4.jpg" class="img-fluid" alt="">
-                <a href="images/portfolio/app4.jpg" class="link-preview" data-lightbox="portfolio" data-title="SM super-resolution microscopy solutions" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="images/portfolio/app4.jpg" class="link-preview" data-lightbox="portfolio" data-title="SM super-resolution microscopy solutions for biomolecule studies" title="Preview"><i class="ion ion-eye"></i></a>
                 <!---<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>--->
               </figure>
 
               <div class="portfolio-info">
                 <!---<h4><a href="#">SM fluorescence microscopy solutions</a></h4>--->
-                <p>SM fluorescence microscopy solutions</p>
+                <h4>SM microscopy solutions</h4>
+                <p>SM fluorescence microscopy hardware and software solutions</p>
               </div>
             </div>
           </div>
