--- a/index.html
+++ b/index.html
@@ -350,7 +350,20 @@
           <h3 class="section-title">Technology and Our Offer</h3>
           <p>We provide platforms for DNA-protein interaction studies and fluorescence microscopy solutions also we can help with custom platform or micrsocopy system design.
             Technology of our Soft DNA Curtains Platform is based on our  <a href="https://pubs.acs.org/doi/full/10.1021/acs.langmuir.8b03424">publication1</a>
-             and  <a href="https://pubs.acs.org/doi/10.1021/acs.langmuir.1c00066">publication2</a> .</p>
+            and  <a href="https://pubs.acs.org/doi/10.1021/acs.langmuir.1c00066">publication2</a>.
+            Our single-molecule and super-resolution microscopy hardware and software solutions are based on <a href="https://www.hardware-x.com/article/S2468-0672(22)00113-4/fulltext">publication3</a> <br>
+            
+            <br>
+            <b>Platformina is offering:</b><br>
+            <br>Studies of fluorescently labelled proteins using Soft DNA Curtains.<br>
+            <br>Fabrication of modified coverslips for printing of the sAv or tAv line-features.<br>
+            <br>Fabrication of modified coverslips with printed sAv or tAv line-features.<br>
+            <br>Ready-to-use flowcells with the printed sAv or tAv line features.<br>
+            <br>Inks for protein micro-cntact printing: sAv or tAv proteins.<br>
+            <br>PDMS elastomer stamps for protein micro-cntact printing.<br>
+            <br>Functionalized DNA molecules for immobilization of the aforementioned protein line-features.<br>
+            <br>Portable Printing Devices for protein micro-cntact printing.<br>
+            </p>
         </header>
 
 <!--         <div class="row">
@@ -700,8 +713,8 @@
           <div class="col-lg-3 col-md-6 footer-info">
             <!---<h3>Platformina</h3>--->
             <a href="#intro"><img src="images/logo.png" alt="" title="" /></a>
-            <p>MB Platformina is startup company (SME) of Vilnius University and FTMC.
-            VAT: LT100013828913
+            <p>MB Platformina is startup company (SME) of Vilnius University and FTMC.<br>
+            VAT: LT100013828913<br>
             Reg. code: 305670114
             </p>
           </div>
