--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="images/portfolio/app2.jpg" class="img-fluid" alt="">
-                <a href="images/portfolio/app2.jpg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="images/portfolio/app2.jpg" class="link-preview" data-lightbox="portfolio" data-title="Micro-contact printing machines" title="Preview"><i class="ion ion-eye"></i></a>
                <!--- <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>--->
               </figure>
 
