--- a/index.html
+++ b/index.html
@@ -413,8 +413,8 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
             <div class="portfolio-wrap">
               <figure>
-                <img src="images/portfolio/app3.jpg" class="img-fluid" alt="">
-                <a href="images/portfolio/app3.jpg" class="link-preview" data-lightbox="portfolio" data-title="Si masters, Ink, DNA, stamps, and kits for Soft DNA Curtains" title="Preview"><i class="ion ion-eye"></i></a>
+                <img src="images/portfolio/app3_0.jpg" class="img-fluid" alt="">
+                <a href="images/portfolio/app3_0.jpg" class="link-preview" data-lightbox="portfolio" data-title="Si masters, Ink, DNA, stamps, and kits for Soft DNA Curtains" title="Preview"><i class="ion ion-eye"></i></a>
                 <!---<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>--->
               </figure>
 
