--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@
             <div class="contact-email">
               <i class="ion-ios-email-outline"></i>
               <h3>Email</h3>
-              <p><a href="mailto:info@example.com">platformina1@gmail.com</a></p>
+              <p><a href="mailto:platformina1@gmail.com">platformina1@gmail.com</a></p>
             </div>
           </div>
 
