Hide red line with 100% on splash screen

--- a/index.html
+++ b/index.html
@@ -796,11 +796,11 @@
     {
           QueryLoader2(document.querySelector("body"), 
           {
-              barColor: "#EB004E",
+              barColor: "#111",
               backgroundColor: "#111",
               percentage: true,
               barHeight: 1,
-              minimumTime: 900,
+              minimumTime: 0,
               fadeOutTime: 1000,
               deepSearch: false,
           });
