--- a/index.html
+++ b/index.html
@@ -405,7 +405,8 @@
 
               <div class="portfolio-info">
                 <!---<h4><a href="#">Micro-contact printing machine</a></h4>--->
-                <p>Micro-contact printing machines</p>
+                <h4>Micro-contact printing machines</h4>
+                <p>Portable semi-automated printing devices for protein micro-contact printing</p>
               </div>
             </div>
           </div>
